...
        app:layout_constraintBottom_toBottomOf="@id/color_meeting"
        app:layout_constraintStart_toEndOf="@+id/color_meeting"
        app:layout_constraintTop_toTopOf="@id/color_meeting"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/meeting_participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/text_space"
        android:text="@string/participants"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@+id/meeting_informations"
        app:layout_constraintBottom_toBottomOf="@id/color_meeting"
        app:layout_constraintStart_toEndOf="@+id/color_meeting" />

    <ImageButton
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ib_padding_end"
        android:background="@null"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
...
